[package]
name = "packed"
version = "0.4.0"
authors = ["arcnmx"]

description = "A safe #[repr(packed)] interface"
documentation = "http://arcnmx.github.io/packed-rs/packed/"
repository = "https://github.com/arcnmx/packed-rs"
readme = "README.md"
keywords = ["nue", "packed", "data", "unaligned", "aligned"]
license = "MIT"

[features]
oibit = []
